# simple-bsp-compiler

./: CHANGELOG.md  LICENSE  README.md  bsp-compiler.cabal  bsptree.txt  walls.txt
src/: Geometry.hs  Main.hs
