cabal-version:      3.0
name:               bsp-compiler
version:            0.1.0.0
synopsis:           A simple BSP compiler

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jorge L. Martín
maintainer:         jormg82@gmail.com

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md

executable bsp-compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Geometry

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
